syntax = "proto3";
package zidecar.v1;

// Zidecar gRPC service
// Provides Ligerito-proven header chain and compact blocks
service Zidecar {
    // Get header chain proof from height range
    rpc GetHeaderProof(ProofRequest) returns (HeaderProof);

    // Stream compact blocks in range
    rpc GetCompactBlocks(BlockRange) returns (stream CompactBlock);

    // Get current chain tip
    rpc GetTip(Empty) returns (BlockId);

    // Subscribe to new blocks (live feed)
    rpc SubscribeBlocks(Empty) returns (stream BlockId);
}

// Request proof for height range
message ProofRequest {
    uint32 from_height = 1;
    uint32 to_height = 2;    // 0 = current tip
}

// Header chain proof with Ligerito
message HeaderProof {
    // Ligerito proof bytes (serialized)
    bytes ligerito_proof = 1;

    // Height range covered
    uint32 from_height = 2;
    uint32 to_height = 3;

    // Chain tip hash
    bytes tip_hash = 4;

    // Block headers for verification
    repeated BlockHeader headers = 5;
}

// Block header metadata
message BlockHeader {
    uint32 height = 1;
    bytes hash = 2;           // 32 bytes
    bytes prev_hash = 3;      // 32 bytes
    uint64 timestamp = 4;
    bytes merkle_root = 5;    // 32 bytes
}

// Block range query
message BlockRange {
    uint32 start_height = 1;
    uint32 end_height = 2;
}

// Compact block (actions only, no tx metadata)
message CompactBlock {
    uint32 height = 1;
    bytes hash = 2;
    repeated CompactAction actions = 3;
}

// Compact Orchard action for trial decryption
message CompactAction {
    bytes cmx = 1;              // note commitment (32 bytes)
    bytes ephemeral_key = 2;    // ephemeral public key (32 bytes)
    bytes ciphertext = 3;       // compact ciphertext (52 bytes)
    bytes nullifier = 4;        // nullifier (32 bytes)
}

// Block identifier
message BlockId {
    uint32 height = 1;
    bytes hash = 2;
}

// Empty message
message Empty {}
